[package]
name = "popsicle"
description = "USB Flasher"
version = "1.3.0"
authors = [
    "Jeremy Soller <jeremy@system76.com>",
    "Michael Aaron Murphy <michael@system76.com>",
]
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
name = "popsicle"
path = "src/lib.rs"

[workspace]
members = ["cli", "gtk"]

[dependencies]
anyhow = "1.0"
as-result = "0.2"
async-std = "1"
derive-new = "0.5"
futures = "0.3"
futures_codec = "0.4"
libc = "0.2"
memchr = "2.2"
mnt = "0.3"
ron = "0.6"
serde = "1.0"
srmw = "0.1"
thiserror = "1"
usb-disk-probe = "0.1"
