[package]
name = "popsicle"
description = "USB Flasher"
version = "1.3.0"
authors = [
    "Jeremy Soller <jeremy@system76.com>",
    "Michael Aaron Murphy <michael@system76.com>",
]
license = "MIT"
readme = "README.md"
edition = "2018"

[lib]
name = "popsicle"
path = "src/lib.rs"

[workspace]
members = ["cli", "gtk"]

[dependencies]
anyhow = "1.0.65"
as-result = "0.2.1"
async-std = "1.12.0"
derive-new = "0.5.9"
futures = "0.3.24"
futures_codec = "0.4.1"
libc = "0.2.134"
memchr = "2.5.0"
mnt = "0.3.1"
ron = "0.8.0"
serde = "1.0.145"
srmw = "0.1.1"
thiserror = "1.0.37"
usb-disk-probe = "0.1.0"
