[package]
name = "popsicle"
description = "USB Flasher"
version = "1.3.3"
authors = [
    "Jeremy Soller <jeremy@system76.com>",
    "Michael Aaron Murphy <michael@system76.com>",
]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.70.0"

[lib]
name = "popsicle"
path = "src/lib.rs"

[workspace]
members = ["cli", "gtk"]

[dependencies]
anyhow = "1.0.79"
as-result = "0.2.1"
async-std = "1.12.0"
derive-new = "0.6.0"
futures = "0.3.30"
futures_codec = "0.4.1"
libc = "0.2.151"
memchr = "2.7.1"
mnt = "0.3.1"
ron = "0.8.1"
serde = { version = "1.0.194", features = ["derive"] }
srmw = "0.1.1"
thiserror = "1.0.56"
usb-disk-probe = "0.2.0"

