[package]
name = "popsicle_cli"
description = "USB Flasher"
version = "1.3.0"
authors = ["Jeremy Soller <jeremy@system76.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "popsicle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-std = "1"
atty = "0.2"
better-panic = "0.2"
cascade = "1.0"
clap = "2"
derive-new = "0.5"
fomat-macros = "0.3"
futures = "0.3"
i18n-embed = { version = "0.12.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
libc = "0.2"
once_cell = "1.7.2"
pbr = "1"
popsicle = { path = ".." }
rust-embed = "5.9.0"
