[package]
name = "popsicle_cli"
description = "USB Flasher"
version = "1.3.2"
authors = ["Jeremy Soller <jeremy@system76.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "popsicle"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.65"
async-std = "1.12.0"
atty = "0.2.14"
better-panic = "0.3.0"
cascade = "1.0.1"
clap = "4.0.8"
derive-new = "0.5.9"
fomat-macros = "0.3.1"
futures = "0.3.24"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
libc = "0.2.134"
once_cell = "1.15.0"
# pbr = "1.0.4"
pbr = { git = "https://github.com/ids1024/pb", branch = "write" }
popsicle = { path = ".." }
rust-embed = { version = "6.4.1", features = ["debug-embed"] }
