[package]
name = "popsicle_cli"
description = "USB Flasher"
version = "1.3.3"
authors = ["Jeremy Soller <jeremy@system76.com>"]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "popsicle"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
async-std = "1.12.0"
atty = "0.2.14"
better-panic = "0.3.0"
cascade = "1.0.1"
clap = "4.4.13"
derive-new = "0.6.0"
fomat-macros = "0.3.2"
futures = "0.3.30"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
libc = "0.2.151"
once_cell = "1.19.0"
# pbr = "1.0.4"
pbr = { git = "https://github.com/ids1024/pb", branch = "write" }
popsicle = { path = ".." }
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
