[package]
name = "popsicle_gtk"
description = "USB Flasher"
version = "1.3.0"
authors = [ "Michael Aaron Murphy <michael@system76.com>" ]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "popsicle-gtk"
path = "src/main.rs"

[dependencies]
atomic = "0.5"
anyhow = "1"
bytesize = "1.0"
cascade = "1.0"
crossbeam-channel = "0.5"
dbus = "0.9"
dbus-udisks2 = { git = "https://github.com/pop-os/dbus-udisks2" }
digest = "0.10"
futures = "0.3"
gdk = "0.13"
gdk-pixbuf = "0.9"
gio = "0.9"
glib = "0.10"
gtk = { version = "0.9", features = ["v3_22"] }
hex-view = "0.1"
iso9660 = { git = "https://github.com/ids1024/iso9660-rs" }
libc = "0.2"
md-5 = "0.10"
pango = "0.9"
parking_lot = "0.11"
popsicle = { path = ".." }
pwd = "1"
sha2 = "0.10"
sha-1 = { version = "0.10", features = ["asm"] }
sys-mount = "1"
async-std = "1.3"
i18n-embed = { version = "0.12.0", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.5.0"
rust-embed = { version = "5.9.0", features = ["debug-embed"] }
once_cell = "1.7.2"
