[package]
name = "popsicle_gtk"
description = "USB Flasher"
version = "1.3.3"
authors = [ "Michael Aaron Murphy <michael@system76.com>" ]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "popsicle-gtk"
path = "src/main.rs"

[dependencies]
atomic = "0.6.0"
anyhow = "1.0.65"
bytemuck = "1.14.0"
bytesize = "1.1.0"
cascade = "1.0.1"
crossbeam-channel = "0.5.6"
dbus = "0.9.6"
dbus-udisks2 = { git = "https://github.com/pop-os/dbus-udisks2" }
digest = "0.10.5"
futures = "0.3.24"
gdk = "0.17.0"
gdk-pixbuf = "0.17.0"
gio = "0.17.0"
glib = "0.17.0"
gtk = { version = "0.17.0" }
hex-view = "0.1.3"
iso9660 = { git = "https://github.com/ids1024/iso9660-rs" }
libc = "0.2.134"
md-5 = "0.10.5"
pango = "0.17.0"
popsicle = { path = ".." }
pwd = "1.4.0"
sha2 = "0.10.6"
sha-1 = { version = "0.10.0", features = ["asm"] }
sys-mount = "2.0.2"
async-std = "1.12.0"
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
once_cell = "1.15.0"
