[package]
name = "popsicle_gtk"
description = "USB Flasher"
version = "1.3.3"
authors = [ "Michael Aaron Murphy <michael@system76.com>" ]
license = "MIT"
readme = "README.md"
edition = "2018"

[[bin]]
name = "popsicle-gtk"
path = "src/main.rs"

[dependencies]
atomic = "0.6.0"
anyhow = "1.0.79"
bytemuck = "1.14.0"
bytesize = "1.3.0"
cascade = "1.0.1"
crossbeam-channel = "0.5.10"
dbus = "0.9.7"
dbus-udisks2 = { git = "https://github.com/pop-os/dbus-udisks2" }
digest = "0.10.7"
futures = "0.3.30"
gdk = "0.17.1"
gio = "0.17.10"
glib = "0.17.10"
gtk = { version = "0.17.1" }
hex-view = "0.1.3"
iso9660 = { git = "https://github.com/ids1024/iso9660-rs" }
libc = "0.2.151"
md-5 = "0.10.6"
pango = "0.17.10"
popsicle = { path = ".." }
pwd = "1.4.0"
sha2 = "0.10.8"
sha-1 = { version = "0.10.1", features = ["asm"] }
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
once_cell = "1.19.0"
